--- a/projeto/paletizator.dproj
+++ b/projeto/paletizator.dproj
@@ -164,6 +164,14 @@
             <Form>frmFormGerador</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="..\fontes\programacao\uControlarRobo.pas">
+            <Form>frmControlarRobo</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="..\fontes\admin\uVisualizacaoLog.pas">
+            <Form>frmVisualizaLogs</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -1027,6 +1035,7 @@
                 <Platform value="Win32">True</Platform>
                 <Platform value="Win64">False</Platform>
             </Platforms>
+            <ModelSupport>False</ModelSupport>
         </BorlandProject>
         <ProjectFileVersion>12</ProjectFileVersion>
     </ProjectExtensions>
